force-app/main/default/objects/leaseworks__Mods__c/leaseworks__Mods__c.object-meta.xml
<CustomObject>
    <label>Mod</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>