force-app/main/default/objects/leaseworks__Mods__c/fields/Category_Local__c.field-meta.xml
<CustomField>
    <fullName>Category_Local__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0 Performance Options</fullName>
            </value>
            <value>
                <fullName>2.0 Interior / IFE Options</fullName>
            </value>
            <value>
                <fullName>3.0 EASA Ops Requirement</fullName>
            </value>
            <value>
                <fullName>4.0 FAA Ops Requirement</fullName>
            </value>
            <value>
                <fullName>5.0 STC&#39;s / Mods (not FAA/EASA approved only)</fullName>
            </value>
            <value>
                <fullName>6.0 AD&#39;s / Major Issue (Major AD only)</fullName>
            </value>
            <value>
                <fullName>7.0 Aging Restrictions and Design Service Goal (DSG) Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>