force-app/main/default/objects/leaseworks__Mods__c/fields/Est_Engineering_Local__c.field-meta.xml
<CustomField>
    <fullName>Est_Engineering_Local__c</fullName>
    <inlineHelpText>Est Engineering Date</inlineHelpText>
    <label>Est Engineering</label>
    <type>Date</type>
</CustomField>