force-app/main/default/objects/leaseworks__Mods__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <description>Estimated Delivery Date</description>
    <inlineHelpText>Estimated Delivery Date</inlineHelpText>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>