force-app/main/default/objects/leaseworks__Mods__c/fields/Leadtime_Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Leadtime_Number_of_Months__c</fullName>
    <inlineHelpText>Leadtime</inlineHelpText>
    <label>Leadtime(Number of Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>