force-app/main/default/objects/leaseworks__Mods__c/fields/leaseworks__Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cost_Estimate__c</fullName>
    <label>Cost Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>