force-app/main/default/objects/leaseworks__Mods__c/fields/leaseworks__Kit_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Kit_Status__c</fullName>
    <label>Kit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <color>#FF9900</color>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>