force-app/main/default/objects/leaseworks__Mods__c/fields/leaseworks__Problem__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Problem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Problem</label>
    <type>Checkbox</type>
</CustomField>