force-app/main/default/objects/leaseworks__Mods__c/fields/leaseworks__Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Project__c</fullName>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipName>Engineering</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>