force-app/main/default/objects/leaseworks__Mods__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <description>Purchase Order Number</description>
    <inlineHelpText>Purchase Order Number</inlineHelpText>
    <label>Purchase Order</label>
    <length>96</length>
    <type>Text</type>
</CustomField>