force-app/main/default/objects/leaseworks__Mods__c/fields/Technical_Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Technical_Project_Template__c</fullName>
    <formula>if(leaseworks__Technical_Project__r.RecordType.Name=&#39;Technical Project Template&#39;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Technical_Project_Template</label>
    <type>Checkbox</type>
</CustomField>